--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
+    "swr": "^2.0.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.5"
   },
